--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Jingyuan Deng"
   pronouns         : # example: "she/her"  
-  bio              : "Personal Website"
+  bio              : "Third-year Ph.D. Candidate at NUS in Management Information Systems"
   location         : "Singapore"
   employer         : "National University of Singapore"
   uri              : # URL
