--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Jingyuan Deng / Personal Website"
+title                    : "Jingyuan Deng | Personal Website"
 title_separator          : "|"
 name                     : &name ""
 description              : &description "personal description"
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "djy.png"
   name             : "Jingyuan Deng"
   pronouns         : # example: "she/her"  
   bio              : "Third-year Ph.D. Candidate at NUS in Management Information Systems"
