--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "djy.png"
+  avatar           : "djy.jpg"
   name             : "Jingyuan Deng"
   pronouns         : # example: "she/her"  
   bio              : "Third-year Ph.D. Candidate at NUS in Management Information Systems"
