--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "Third-year Ph.D. Candidate at NUS in Management Information Systems"
   location         : "Singapore"
   employer         : "National University of Singapore"
-  uri              : https://jingydeng.github.io
+  uri              : https://jingydeng.github.io/jingydeng/
   email            : "jingyuan.deng@u.nus.edu" 
 
   # Academic websites
