--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  linkedin         : https://www.linkedin.com/in/jingyuan-d-901751173/
+  linkedin         : jingyuan-d-901751173
   #bluesky          : "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
