--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,23 +5,16 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
+  - title: "Research"
     url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
 
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "Resource"
+    url: /resource/
     
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
