--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Jingyuan Deng"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. Candidate at NUS in Management Information Systems"
-  location         : "Singapore"
+  location         : "Com3, Singapore"
   employer         : "National University of Singapore"
   #uri              : https://jingydeng.github.io/jingydeng/
   email            : "jingyuan.deng@u.nus.edu" 
